[package]
name = "wwfypc-payments"
version = "0.1.0"
authors = ["Q 🦄 <q@magicalcodewit.ch>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-web-async-await = { path = "../actix-web-async-await" }
actix-cors = "0.1"
actix-session = "0.2"
actix = "0.8"
actix-redis = "0.7"
diesel = { version = "1.4", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
diesel_migrations = "1.4"
diesel_derives = "~1.4.0"
dotenv = "0.9.0"
log = "0.4"
pretty_env_logger = "0.3"
tera = "0.11"
lazy_static = "1.4.0"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-hex = "0.1"
serde_urlencoded = "0.6.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures01 = { version = "0.1", package = "futures" }
http = "0.1"
listenfd = "0.3"
uuid = { version = "<0.7", features = ["serde", "v4"] }
rust_decimal = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-web-static-files = "0.2"
rust-crypto = "^0.2"
rand = "0.7"
alcoholic_jwt = "1"
lettre = "0.9"
lettre_email = "0.9"
failure = "0.1"
lapin-futures = "^0.28"
amqp = "0.1.3"
encoding = "0.2"
sentry = "0.12.0"
sentry-actix = "0.11.0"

[build-dependencies]
actix-web-static-files = "0.2"
