[package]
name = "wwfypc-payments"
version = "0.1.0"
authors = ["Q 🦄 <q@magicalcodewit.ch>"]
edition = "2018"
build = "build.rs"

#[[bin]]
#name = "wwfypc-payments"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1"
actix-web-async-await = { git = "https://github.com/TheEnbyperor/actix-web-async-await.git" }
actix-cors = "0.2"
actix-session = "0.3"
actix = "0.9"
actix-redis = "0.8"
diesel = { version = "1.4", features = ["postgres", "uuidv07", "chrono", "serde_json"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
diesel_migrations = "1.4"
dotenv = "0.9.0"
log = "0.4"
pretty_env_logger = "0.3"
tera = "0.11"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-hex = "0.1"
serde_urlencoded = "0.6.1"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures01 = { version = "0.1", package = "futures" }
http = "0.2"
listenfd = "0.3"
uuid = { version = "0.7", features = ["serde", "v4"] }
rust_decimal = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-web-static-files = "2"
rust-crypto = "0.2"
rand = "0.7"
alcoholic_jwt = "1"
lettre = "0.9"
lettre_email = "0.9"
failure = "0.1"
lapin = "0.39"
amqp = "0.1.3"
encoding = "0.2"
sentry = "0.18"
sentry-actix = "0.18"
openssl = "*"
openssl-probe = "0.1"
url = "2"
futures-util = "0.3.4"
futures-macro = "0.3.4"
native-tls = "0.2.4"

[build-dependencies]
actix-web-static-files = "2"

[profile.release]
debug = true
